--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,10 @@ android {
     compileSdkVersion 29
     buildToolsVersion "30.0.2"
 
+
     defaultConfig {
+
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         applicationId "com.gloria.myapplication"
         minSdkVersion 21
         targetSdkVersion 29
@@ -20,6 +23,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+        }
+    }
 }
 
 dependencies {
@@ -29,5 +37,11 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    testImplementation "org.robolectric:robolectric:3.8"
+    androidTestImplementation 'androidx.test:rules:1.1.0'
+    androidTestImplementation 'androidx.test:runner:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+//    implementation 'com.android.support:appcompat-v7:27.1.1'
+
 
 }
