--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,4 @@ org.gradle.jvmargs=-Xmx2048m
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
+YelpApiKey = "Bearer CypoMrCqtP0eYCoIpdldIkECrQ6Q_JFelewVjh_SrIi9gJEBhGPXIAS_1J91hhbpSh_CaJYP2JX_yIX2XKdMXHJoTl72jdkVEww5K7N4xKuNrAOdf6PHkvWYmESEX3Yx"
